cmake_minimum_required(VERSION 3.17)
project(AdventofCode2020)

set(CMAKE_CXX_STANDARD 14)

add_executable(AoC202001 01/report_repair.cpp)
add_executable(AoC202002 02/password_philosophy.cpp)
add_executable(AoC202003 03/toboggan_trajectory.cpp)
add_executable(AoC202004 04/password_processing.cpp)
add_executable(AoC202005 05/binary_boarding.cpp)
