cmake_minimum_required(VERSION 3.17)
project(AdventofCode2020)

set(CMAKE_CXX_STANDARD 14)

add_executable(01_Report_Repair 01/report_repair.cpp)
add_executable(02_Password_Philosophy 02/password_philosophy.cpp)
add_executable(03_Toboggan_Trajectory 03/toboggan_trajectory.cpp)
add_executable(04_Password_Processing 04/password_processing.cpp)
add_executable(05_Binary_Boarding 05/binary_boarding.cpp)
add_executable(06_Custom_Customs 06/custom_customs.cpp)
